# latency-lab

./: .gitignore  CMakeLists.txt  CMakePresets.json  reqs.txt
.github/workflows/: ci.yml
bench/: README.md  bench_main.cpp  build_info.h.in  case.h  cli.cpp  cli.h  csv.h  fork_exec_wait_case.cpp  fork_wait_case.cpp  main.cpp  noop_case.cpp  noop_main.cpp  run_utils.cpp  run_utils.h  stats.h  timer.h
bench/cases/: fork_exec_wait_case.cpp
bench/core/: cli.cpp  cli.h  meta.cpp  meta.h  noise.cpp  noise.h  pinning.cpp  pinning.h  registry.cpp  registry.h  timer.h
bench/tools/: child_exec.cpp
docs/: architecture.md  backlog.md  dev_setup.md  overview.md  python_tools.md
notebooks/: analysis.ipynb
results/: index.csv
results/os/fork_exec_wait/20260125_110351_quiet/: meta.json  raw.llr.xz  stdout.txt  summary.csv
results/os/fork_exec_wait/20260201_082912_run/: meta.json  raw.llr.xz  stdout.txt  summary.csv
results/os/fork_exec_wait/20260201_082917_run/: meta.json  raw.llr.xz  stdout.txt  summary.csv
results/os/fork_wait/20260125_110356_quiet/: meta.json  raw.llr.xz  stdout.txt  summary.csv
results/os/fork_wait/20260201_082921_run/: meta.json  raw.llr.xz  stdout.txt  summary.csv
results/os/fork_wait/20260201_082923_run/: meta.json  raw.llr.xz  stdout.txt  summary.csv
results/os/noop/20260125_110358_quiet/: meta.json  raw.llr.xz  stdout.txt  summary.csv
results/os/noop/20260201_082924_run/: meta.json  raw.llr.xz  stdout.txt  summary.csv
results/os/noop/20260201_082924_run_1/: meta.json  raw.llr.xz  stdout.txt  summary.csv
scripts/: analysis_utils.py  notebook_runner.py  notebook_ui.py  raw_format.py  results_lib.py  run_bench.py
tests/: cli_tests.cpp  registry_tests.cpp  smoke_tests.cpp  test_harness.h
tests/python/: conftest.py  test_raw_format.py  test_results_lib.py  test_run_bench.py
